# UGV-Robot

./: README.md  controller_input.cpp  server.py  xbox_controller.py  xbox_inputs.py
Extras/: README.md  Test.java  client.py
Main/: laptop_client_controller.py
Solidworks/: README.md  README.txt
Solidworks/Arm - replacement/: 0.75 in shaft hub.SLDPRT  1801-0040-0001 assembly (2.5mm thick plate).STEP.SLDASM  1910-0025-0816.STEP.SLDASM  25 kg.SLDPRT  25kgservobracket.SLDPRT  25kgservobracket2.SLDPRT  25kgservobracket2.STEP  2764K312_Servomotor Precision Flexible Shaft Coupling.SLDPRT  4 mm M6 spacer.SLDPRT  47065T553_T-Slotted Framing.SLDPRT  47065T653_T-Slotted Framing.SLDPRT  7 mm washer.SLDPRT  8 mm bearing.SLDPRT  80 kg.SLDPRT  8020tframeforjoint3.SLDPRT  8020tframeforjoint4.SLDPRT  91125A471_Female Threaded Round Standoff.SLDPRT  Arm AssemblyStep.STEP  Base post-nazanin.SLDPRT  Base post.SLDPRT  Bearing other part.SLDPRT  Keyed Shaft.SLDPRT  (+36 more)
jetson_orin_code/: jetson_server.py  testing_jetson_to_arduino.py
laptop_client_code/: laptop_client.py
ros_noetic_catkin_ws/src/full_robot_arm_urdf/: CMakeLists.txt
ros_noetic_catkin_ws/src/full_robot_arm_urdf/config/: joint_trajectory_controller.yaml
ros_noetic_catkin_ws/src/full_robot_arm_urdf/launch/: arm_urdf.launch  gazebo.launch
ros_noetic_catkin_ws/src/full_robot_arm_urdf/meshes/: ee_finger1_prox.STL  ee_finger2_dist.STL  ee_finger2_prox.STL  ee_finger2_roll.STL  ee_thumb_dist.STL  link_2.STL  link_4.STL
ros_noetic_catkin_ws/src/full_robot_arm_urdf/urdf/: full_robot_arm_urdf.csv  full_robot_arm_urdf.urdf
(+263 files in other folders)
